temporary spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -294,7 +294,7 @@ input, select, textarea {
 	#work h5,
 	#work2 h5,
 	#work3 h5 {
-		margin: 0 0 0 5%;
+		margin: 0 0 2% 5%;
 	}
 
 	#work a .major,
